swagger doc for find /story/storyId story
