# src/story/story.controller.ts
@@ -16,7 +16,7 @@ import { CreateStoryDto } from './dto/createStory.dto';
 import { User } from '@app/user/decorators/user.decorator';
 import { UserEntity } from '@app/user/user.entity';
 import { AuthGuard } from '@app/user/guards/auth.guard';
-import { StoryResponseInterface } from './types/buildStoryResponse.type';
+import { StoryResponse } from './types/buildStoryResponse.type';
 import { UpdateStoryDto } from './dto/updateStory.dto';
 import { GlobalValidationPipe } from '@app/shared/pipes/global-validation.pipe';
 import {
@@ -79,13 +79,37 @@ export class StoryController {
     return await this.storyService.findUserStories(userId, query);
   }
 
+  @Get(':storyId')
+  @ApiBearerAuth('JWT-auth')
+  @ApiOperation({
+    summary: 'Get a story',
+    description: 'Return a story',
+  })
+  @ApiOkResponse({
+    description: 'Returns a single story',
+    type: StoryResponse,
+  })
+  @ApiResponse({
+    status: 401,
+    description: 'Unauthorized: No token provided',
+  })
+  @ApiResponse({
+    status: 404,
+    description: 'Story not found!',
+  })
+  @UseGuards(AuthGuard)
+  async findAStory(@Param('storyId') storyId: string): Promise<StoryResponse> {
+    const story = await this.storyService.findBySlug(storyId);
+    return this.storyService.buildStoryResponse(story);
+  }
+
   @Post('create')
   @UseGuards(AuthGuard)
   @UsePipes(new ValidationPipe())
   async createStory(
     @User() user: UserEntity,
     @Body('story') createStoryDto: CreateStoryDto,
-  ): Promise<StoryResponseInterface> {
+  ): Promise<StoryResponse> {
     const story = await this.storyService.createStory(createStoryDto, user);
     return this.storyService.buildStoryResponse(story);
   }
@@ -97,20 +121,12 @@ export class StoryController {
     @Param('slug') slug: string,
     @User() user: UserEntity,
     @Body('story') updateStoryDto: UpdateStoryDto,
-  ): Promise<StoryResponseInterface> {
+  ): Promise<StoryResponse> {
     const story = await this.storyService.updateStory(
       updateStoryDto,
       slug,
       user,
     );
-    return this.storyService.buildStoryResponse(story);
-  }
-
-  @Get(':slug')
-  async findAStory(
-    @Param('slug') slug: string,
-  ): Promise<StoryResponseInterface> {
-    const story = await this.storyService.findBySlug(slug);
     return this.storyService.buildStoryResponse(story);
   }
 
@@ -127,7 +143,7 @@ export class StoryController {
   async likeStory(
     @Param('slug') slug: string,
     @User() user: UserEntity,
-  ): Promise<StoryResponseInterface> {
+  ): Promise<StoryResponse> {
     const story = await this.storyService.likeStory(slug, user);
     return this.storyService.buildStoryResponse(story);
   }
@@ -137,7 +153,7 @@ export class StoryController {
   async dislikeStory(
     @Param('slug') slug: string,
     @User() user: UserEntity,
-  ): Promise<StoryResponseInterface> {
+  ): Promise<StoryResponse> {
     const story = await this.storyService.dislikeStory(slug, user.id);
     return this.storyService.buildStoryResponse(story);
   }
